--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,12 +10,13 @@ pico_sdk_init()
 add_executable(pc_remote_button
 	src/main.cpp
 	src/ntp.cpp
+	src/FreeRTOS_support.cpp
 )
 
 target_link_libraries(pc_remote_button
 	pico_cyw43_arch_lwip_sys_freertos
 	pico_stdlib
-	FreeRTOS-Kernel-Heap4
+	FreeRTOS-Kernel-Heap3
 )
 
 target_compile_options(pc_remote_button PRIVATE
