--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,11 @@ pico_sdk_init()
 add_executable(pc_remote_button
 	src/main.cpp
 	src/ntp.cpp
+	src/switch_task.cpp
+	src/log.cpp
+	src/server.cpp
+	src/network_task.cpp
+	src/cli_task.cpp
 	src/FreeRTOS_support.cpp
 )
 
