Improve handle_request move, shutup GCC format abi
 - Take socket by value forcing a move in handle_request, which also
   leads to automatic destruction of the object on function return as
   intended
 - add -Wno-psabi to shut up GCC from throwing up notices on std::format
   use

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ target_link_libraries(pc_remote_button
 
 target_compile_options(pc_remote_button PRIVATE
 	-fstack-usage
+	-Wno-psabi
 )
 
 target_include_directories(pc_remote_button PRIVATE
