wifi: move from main, check lwip flags also
 - Apparently checking pico cyw43 status isn't enough-- it always
   returns JOIN even if lwip reports a link change/drop. Also check LWIP
   flag and try to reconnect if we lose the link.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ add_executable(pc_remote_button
 	src/network_task.cpp
 	src/cli_task.cpp
 	src/FreeRTOS_support.cpp
+	src/wifi_management_task.cpp
 )
 
 target_link_libraries(pc_remote_button
