Add pcrb namespace, use last code from sctu
 - Copy the latest networking code from snes_controllers_to_usb project,
   before I removed it from that directory (I really should make a pico
   library of my stuff).
 - Move almost everything to the pcrb (pc_remote_button) namespace.
 - Also copied latest watchdog code from sctu.
 - Updated to use xTaskCreateAffinitySet instead of xTaskCreate.

--- a/firmware/CMakeLists.txt
+++ b/firmware/CMakeLists.txt
@@ -17,15 +17,18 @@ add_executable(pc_remote_button
 	src/cli_task.cpp
 	src/FreeRTOS_support.cpp
 	src/wifi_management_task.cpp
+	src/watchdog.cpp
 )
 
 target_link_libraries(pc_remote_button
 	pico_cyw43_arch_lwip_sys_freertos
 	pico_stdlib
-	FreeRTOS-Kernel-Heap3
+	FreeRTOS-Kernel-Heap4
 )
 
 target_compile_options(pc_remote_button PRIVATE
+	$<$<CXX_COMPILER_ID:MSVC>:/W4>
+	$<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra>
 	-fstack-usage
 	-Wno-psabi
 )
@@ -37,8 +40,6 @@ target_include_directories(pc_remote_button PRIVATE
 target_compile_features(pc_remote_button PRIVATE
 	cxx_std_23
 )
-
-set_property(TARGET pc_remote_button PROPERTY CXX_STANDARD 23)
 
 if (DEFINED HOSTNAME)
 	add_compile_definitions(CYW43_HOST_NAME=\"${HOSTNAME}\")
