Pull in gpico library
 - gpico library provides syscalls for IO, but requires some USB
   plumbing (maybe I should have it provide said plumbing?). Add
   plumbing in main
 - gpico takes care of watchdogs, and provides auxiliary FreeRTOS
   functions. Beware, it is opinionated and expects Heap4
   implementation.
 - Logging is provided by gpico as well.
 - Add missing format includes in some files.

--- a/firmware/CMakeLists.txt
+++ b/firmware/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.20)
 
 include(pico_sdk_import.cmake)
 include(FreeRTOS_Kernel_import.cmake)
+include(gpico_import.cmake)
 
 project(pc_remote_button)
 
@@ -10,20 +11,19 @@ pico_sdk_init()
 add_executable(pc_remote_button
 	src/main.cpp
 	src/ntp.cpp
-	src/switch_task.cpp
-	src/log.cpp
 	src/server.cpp
+	src/switch_task.cpp
 	src/network_task.cpp
 	src/cli_task.cpp
-	src/FreeRTOS_support.cpp
 	src/wifi_management_task.cpp
-	src/watchdog.cpp
+	src/usb_descriptors.cpp
 )
 
 target_link_libraries(pc_remote_button
 	pico_cyw43_arch_lwip_sys_freertos
 	pico_stdlib
 	FreeRTOS-Kernel-Heap4
+	gpico
 )
 
 target_compile_options(pc_remote_button PRIVATE
@@ -41,11 +41,11 @@ target_compile_features(pc_remote_button PRIVATE
 	cxx_std_23
 )
 
+pico_set_printf_implementation(pc_remote_button compiler)
+pico_set_stdio_implementation(pc_remote_button compiler)
+
 if (DEFINED HOSTNAME)
 	add_compile_definitions(CYW43_HOST_NAME=\"${HOSTNAME}\")
 endif()
 
 pico_add_extra_outputs(pc_remote_button)
-
-pico_enable_stdio_usb(pc_remote_button 1)
-pico_enable_stdio_uart(pc_remote_button 0)
