Add new monitor task
 - Monitor task monitors the PC power state through pin 21. This pin
   should be connected to one of the 3.3V power pins on the ATX
   motherboard connector (or any other 3.3V pin on the motherboard).

--- a/firmware/CMakeLists.txt
+++ b/firmware/CMakeLists.txt
@@ -20,6 +20,7 @@ add_executable(pc_remote_button
 	src/network_task.cpp
 	src/cli_task.cpp
 	src/wifi_management_task.cpp
+	src/monitor_task.cpp
 	src/usb_descriptors.cpp
 )
 
